# WorkoutPlanning

./: README.md
src/: CMakeLists.txt  CMakeLists.txt.user.b0ddf97  aaa.qrc  cviceni.qml  cviky_storage.js  end_of_exercise.qml  images.qrc  login.qml  main.cpp  main.qml  profile.qml  profile.qml.autosave  profiles.js  share_screen.qml  upravit_main.qml
